@@ -1,3 +1,8 @@
+2004-10-13 Hasso Tepper <hasso at quagga.net>
+
+	* command.c: Make CMD_ERR_NOTHING_TODO nonfatal if reading
+	  configuration from file. Fixes critical bugzilla #113.
+
 2004-10-13 Paul Jakma <paul@dishone.st>
 
 	* (global) more const'ification.
